# -ros1-

./: README.md
smart_pharmacy_competition_github/: .gitattributes  .gitignore  README.md  requirements-pc.txt
smart_pharmacy_competition_github/docs/: CODE_ROLE_AND_RULE_CHECK.md  GITHUB_UPLOAD_CHECKLIST.md  QR_VOICE_OPERATION.md  REPOSITORY_STRUCTURE.md  ROS1_ENV_AND_LIDAR_NOTES.md  competition_vision_rule_integration_20260605.md  judge_points_for_software_20260605.csv  judge_points_for_software_20260605.md  judge_software_connection_guide.md  manual_competition_mode_20260605.md  manual_competition_points_20260605.md  rules_extracted.txt  windowA_arrival_power_loss_note_20260605.md
smart_pharmacy_competition_github/pc_tools/: keyboard_control_auto_login.py  start_judge_deploy_after_charge.ps1  start_keyboard_control.ps1  start_keyboard_control_auto_login.ps1  start_keyboard_control_default.ps1  web_rviz_server.py
smart_pharmacy_competition_github/ros1_smart_pharmacy_patrol/: CMakeLists.txt  README.md  package.xml
smart_pharmacy_competition_github/ros1_smart_pharmacy_patrol/config/: competition_navigation_planned_paths.yaml  waypoints.yaml
smart_pharmacy_competition_github/ros1_smart_pharmacy_patrol/launch/: auto_arrival_detector.launch  board2_ocr.launch  competition.launch  judge_bridge.launch  manual_arrival_voice.launch  manual_competition.launch  patrol.launch  qrcode_voice.launch
smart_pharmacy_competition_github/ros1_smart_pharmacy_patrol/scripts/: auto_arrival_detector.py  board2_ocr_node.py  fake_judge_server.py  judge_bridge.py  judge_smoke_test.py  manual_arrival_voice_node.py  patrol_mission.py  qrcode_voice_node.py  run_judge_bridge.sh  run_manual_competition.sh  run_patrol_real.sh
smart_pharmacy_competition_github/tools/: build_competition_submission.py  deploy_judge_system_to_robot.py  (+1 more)
(+15 files in other folders)
