<?xml version="1.0"?>
<package format="2">
  <name>ros1_smart_pharmacy_patrol</name>
  <version>0.1.0</version>
  <description>ROS 1 adapter for the smart pharmacy patrol mission.</description>

  <maintainer email="yc@todo.todo">yc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
  </export>
</package>
